feat: fuzzy search for lightning node alias (#908)
